# kinf-template

./: .editorconfig  .gitignore  LICENSE  Makefile  README.md  cabal.project  hie.yaml  site.cabal
.github/workflows/: generate.yml  lint.yml
app/: gen.hs
content/: content.cabal  credit.hs  index.hs
content/article/: 1-article.hs
content/lib/: Layout.hs
lib/: Data.hs
