cabal-version:       2.2

name:                site
version:             0.1.0.0
license:             BSD-3-Clause
license-file:        LICENSE
author:              Kazuki Okamoto
maintainer:          kazuki.okamoto@kakkun61.com
build-type:          Simple

common common
  build-depends:       base >= 4 && < 5
  ghc-options:         -Wall
                       -Wcompat
                       -Wno-name-shadowing
  default-language:    Haskell2010

library
  import:              common
  hs-source-dirs:      lib
  exposed-modules:     Data
  build-depends:       lucid,
                       text

executable gen
  import:              common
  hs-source-dirs:      app
  main-is:             gen.hs
  build-depends:       site,
                       hint,
                       lucid,
                       shake,
                       with-utf8
