cabal-version:       2.2

name:                content
version:             0.1.0.0
author:              Kazuki Okamoto
maintainer:          kazuki.okamoto@kakkun61.com
build-type:          Simple

common common
  build-depends:       base >= 4 && < 5,
                       site,
                       lucid,
                       text
  default-language:    Haskell2010

common executable
  import:              common
  build-depends:       content

library
  import:              common
  hs-source-dirs:      lib
  exposed-modules:     Layout

executable index
  import:           executable
  hs-source-dirs:   .
  main-is:          index.hs

executable credit
  import:           executable
  hs-source-dirs:   .
  main-is:          credit.hs

executable article
  import:           executable
  hs-source-dirs:   article
  main-is:          1-article.hs
